fix top spacing of text

--- a/md2-solution/css/basestyle.css
+++ b/md2-solution/css/basestyle.css
@@ -17,7 +17,7 @@ h1 {
 
 div.container {
     /* width: 100%; */
-    height: 300px;
+    height: 350px;
     margin-top: 10px;
     margin-bottom: 10px;
     border: 15px solid white;
@@ -44,9 +44,12 @@ p.styled {
     color: cornsilk;
     font-family: 'Ubuntu', sans-serif;
     /* give some margine on the left and right, auto margin will center the element */
-    width: 90%;
+    width: 95%;
+    /* add top padding to give some space between title and text */
+    padding-top: 10px;
     margin-left: auto;
     margin-right: auto;
+    float: both;
 }
 
 
